[gd_scene load_steps=6 format=3 uid="uid://ca4iwt3ldntnp"]

[ext_resource type="PackedScene" uid="uid://dao4cui0qcwt8" path="res://common/ui/bg.tscn" id="1_ayiur"]
[ext_resource type="Script" uid="uid://b6gbofak1rt2s" path="res://common/ui/settings/settings.gd" id="1_huhim"]
[ext_resource type="Texture2D" uid="uid://c6qosmgk1j0d5" path="res://merchant/price_panel.png" id="2_rdlps"]
[ext_resource type="FontFile" uid="uid://cmwv2cvr5llki" path="res://common/fonts/BitPap.ttf" id="3_rdlps"]
[ext_resource type="PackedScene" uid="uid://cl5ov5nvhs82d" path="res://common/ui/close_tab/close_tab.tscn" id="5_lf8sk"]

[node name="Settings" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_huhim")
metadata/_edit_lock_ = true

[node name="BG" parent="." instance=ExtResource("1_ayiur")]
z_index = -2
layout_mode = 0

[node name="NinePatchRect" type="NinePatchRect" parent="."]
layout_mode = 0
offset_left = 65.0
offset_top = 19.0
offset_right = 256.0
offset_bottom = 143.0
texture = ExtResource("2_rdlps")
patch_margin_left = 2
patch_margin_top = 3
patch_margin_right = 3
patch_margin_bottom = 2

[node name="Label" type="Label" parent="NinePatchRect"]
layout_mode = 0
offset_left = 45.0
offset_top = 3.0
offset_right = 137.0
offset_bottom = 35.0
theme_override_fonts/font = ExtResource("3_rdlps")
theme_override_font_sizes/font_size = 32
text = "settings"

[node name="MuteSFX" type="Button" parent="NinePatchRect"]
layout_mode = 0
offset_left = 58.0
offset_top = 46.0
offset_right = 120.0
offset_bottom = 70.0
theme_override_fonts/font = ExtResource("3_rdlps")
toggle_mode = true
text = "mute sfx"

[node name="MuteAmbience" type="Button" parent="NinePatchRect"]
layout_mode = 0
offset_left = 47.0
offset_top = 81.0
offset_right = 134.0
offset_bottom = 105.0
theme_override_fonts/font = ExtResource("3_rdlps")
toggle_mode = true
text = "mute ambience"

[node name="CloseTab" parent="." instance=ExtResource("5_lf8sk")]
layout_mode = 0
offset_left = 287.0
offset_top = 1.0
offset_right = 319.0
offset_bottom = 33.0

[connection signal="toggled" from="NinePatchRect/MuteSFX" to="." method="_on_mute_sfx_toggled"]
[connection signal="pressed" from="NinePatchRect/MuteAmbience" to="." method="_on_mute_ambience_pressed"]
[connection signal="toggled" from="NinePatchRect/MuteAmbience" to="." method="_on_mute_ambience_toggled"]
